--- a/app/assets/stylesheets/typography.scss
+++ b/app/assets/stylesheets/typography.scss
@@ -13,6 +13,7 @@ h2 {
   font-size: 40px;
   color: $text-color;
   text-align: center;
+  line-height: 48px;
 }
 
 h3 {
